Bug 453193 - Kalarm crashed while selecting font thickness of an alarm template
Summary: Kalarm crashed while selecting font thickness of an alarm template
Status: RESOLVED FIXED
Alias: None
Product: kalarm
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: David Jarvie
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2022-04-29 12:32 UTC by Lyubomir
Modified: 2022-04-30 15:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.04.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lyubomir 2022-04-29 12:32:14 UTC
Application: kalarm (3.4.0 (KDE Apps 22.04.0))

Qt Version: 5.15.3
Frameworks Version: 5.93.0
Operating System: Linux 5.17.4-zen1-1-zen x86_64
Windowing System: Wayland
Distribution: Arch Linux
DrKonqi: 5.24.4 [KCrashBackend]

-- Information about the crash:
- What I was doing when the application crashed:
I tried to change the font to "Thick" in a "create new template" modal

- Custom settings of the application:
I think i selected the yellow foreground color there

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: KAlarm (kalarm), signal: Segmentation fault
Content of s_kcrashErrorMessage: {_M_t = {<std::__uniq_ptr_impl<char, std::default_delete<char []> >> = {_M_t = std::tuple containing = {[1] = 0x0, [2] = {<No data fields>}}}, <No data fields>}}
[KCrash Handler]
#6  QListWidgetItem::text (this=0x0) at /usr/include/qt/QtWidgets/qlistwidget.h:85
#7  KFontChooserPrivate::slotStyleSelected (style=..., this=0x561624a9d9f0) at /usr/src/debug/kwidgetsaddons-5.93.0/src/kfontchooser.cpp:528
#8  KFontChooserPrivate::slotStyleSelected (style=..., this=0x561624a9d9f0) at /usr/src/debug/kwidgetsaddons-5.93.0/src/kfontchooser.cpp:520
#9  operator() (__closure=<optimized out>, __closure=<optimized out>, style=...) at /usr/src/debug/kwidgetsaddons-5.93.0/src/kfontchooser.cpp:217
#10 QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<const QString&>, void, KFontChooserPrivate::init()::<lambda(const QString&)> >::call (arg=<optimized out>, f=...) at /usr/include/qt/QtCore/qobjectdefs_impl.h:146
#11 QtPrivate::Functor<KFontChooserPrivate::init()::<lambda(const QString&)>, 1>::call<QtPrivate::List<QString const&>, void> (arg=<optimized out>, f=...) at /usr/include/qt/QtCore/qobjectdefs_impl.h:256
#12 QtPrivate::QFunctorSlotObject<KFontChooserPrivate::init()::<lambda(const QString&)>, 1, QtPrivate::List<const QString&>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *) (which=1, this_=<optimized out>, r=<optimized out>, a=<optimized out>, ret=<optimized out>) at /usr/include/qt/QtCore/qobjectdefs_impl.h:443
#13 0x00007f84e16b4463 in QtPrivate::QSlotObjectBase::call (a=<optimized out>, r=<optimized out>, this=<optimized out>, this=<optimized out>, r=<optimized out>, a=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#14 doActivate<false> (sender=0x561624aa0bb0, signal_index=22, argv=0x7ffde1bce920) at kernel/qobject.cpp:3886
#15 0x00007f84e23a88fa in QListWidget::currentTextChanged (this=this@entry=0x561624aa0bb0, _t1=...) at .moc/moc_qlistwidget.cpp:410
#16 0x00007f84e23af1b7 in QListWidgetPrivate::_q_emitCurrentItemChanged (previous=..., current=..., this=0x7ffde1bce9b8) at itemviews/qlistwidget.cpp:1235
#17 QListWidget::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at .moc/moc_qlistwidget.cpp:197
#18 0x00007f84e16b44af in doActivate<false> (sender=0x561624c41c50, signal_index=4, argv=0x7ffde1bceaf0) at kernel/qobject.cpp:3898
#19 0x00007f84e16499b8 in QItemSelectionModel::currentChanged (this=this@entry=0x561624c41c50, _t1=..., _t2=...) at .moc/moc_qitemselectionmodel.cpp:482
#20 0x00007f84e164a933 in QItemSelectionModel::setCurrentIndex (this=0x561624c41c50, index=..., command=...) at itemmodels/qitemselectionmodel.cpp:1416
#21 0x00007f84e235e793 in QAbstractItemView::mousePressEvent (this=0x561624aa0bb0, event=<optimized out>) at itemviews/qabstractitemview.cpp:1786
#22 0x00007f84e2130746 in QWidget::event (this=0x561624aa0bb0, event=0x7ffde1bcf1a0) at kernel/qwidget.cpp:8655
#23 0x00007f84e21dfc53 in QFrame::event (this=0x561624aa0bb0, e=0x7ffde1bcf1a0) at widgets/qframe.cpp:550
#24 0x00007f84e168232a in QCoreApplicationPrivate::sendThroughObjectEventFilters (event=<optimized out>, receiver=<optimized out>) at kernel/qcoreapplication.cpp:1190
#25 QCoreApplicationPrivate::sendThroughObjectEventFilters (receiver=receiver@entry=0x561624aa10e0, event=event@entry=0x7ffde1bcf1a0) at kernel/qcoreapplication.cpp:1179
#26 0x00007f84e20fa2b5 in QApplicationPrivate::notify_helper (this=this@entry=0x561624363720, receiver=receiver@entry=0x561624aa10e0, e=e@entry=0x7ffde1bcf1a0) at kernel/qapplication.cpp:3631
#27 0x00007f84e20ff0f7 in QApplication::notify (this=0x7ffde1bcee30, receiver=0x561624aa10e0, e=0x7ffde1bcf1a0) at kernel/qapplication.cpp:3081
#28 0x00007f84e16835aa in QCoreApplication::notifyInternal2 (receiver=0x561624aa10e0, event=0x7ffde1bcf1a0) at kernel/qcoreapplication.cpp:1064
#29 0x00007f84e20fdabf in QApplicationPrivate::sendMouseEvent (receiver=0x561624aa10e0, event=0x7ffde1bcf1a0, alienWidget=0x561624aa10e0, nativeWidget=0x56162493f190, buttonDown=<optimized out>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false) at kernel/qapplication.cpp:2619
#30 0x00007f84e214e927 in QWidgetWindow::handleMouseEvent (this=0x561624de0770, event=0x7ffde1bcf510) at kernel/qwidgetwindow.cpp:683
#31 0x00007f84e21504dc in QWidgetWindow::event (this=0x561624de0770, event=0x7ffde1bcf510) at kernel/qwidgetwindow.cpp:300
#32 0x00007f84e20fa2c6 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x561624de0770, e=0x7ffde1bcf510) at kernel/qapplication.cpp:3637
#33 0x00007f84e16835aa in QCoreApplication::notifyInternal2 (receiver=0x561624de0770, event=0x7ffde1bcf510) at kernel/qcoreapplication.cpp:1064
#34 0x00007f84e1a56fd0 in QGuiApplicationPrivate::processMouseEvent (e=0x7f84d40088e0) at kernel/qguiapplication.cpp:2282
#35 0x00007f84e1a416f5 in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at kernel/qwindowsysteminterface.cpp:1169
#36 0x00007f84dfe54c45 in userEventSourceDispatch(_GSource*, int (*)(void*), void*) () from /usr/lib/libQt5WaylandClient.so.5
#37 0x00007f84df334163 in g_main_dispatch (context=0x561624366980) at ../glib/glib/gmain.c:3417
#38 g_main_context_dispatch (context=0x561624366980) at ../glib/glib/gmain.c:4135
#39 0x00007f84df38a9e9 in g_main_context_iterate.constprop.0 (context=context@entry=0x561624366980, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/glib/gmain.c:4211
#40 0x00007f84df3316c5 in g_main_context_iteration (context=0x561624366980, may_block=1) at ../glib/glib/gmain.c:4276
#41 0x00007f84e16cf57a in QEventDispatcherGlib::processEvents (this=0x56162434b370, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#42 0x00007f84e167b88b in QEventLoop::exec (this=this@entry=0x7ffde1bcf8a0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#43 0x00007f84e22f48b6 in QDialog::exec (this=0x56162493f190) at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#44 0x00005616227d7f04 in FontColourButton::slotButtonPressed (this=0x561624930fd0) at /usr/src/debug/kalarm-22.04.0/src/fontcolourbutton.cpp:59
#45 0x00007f84e16b4463 in QtPrivate::QSlotObjectBase::call (a=<optimized out>, r=<optimized out>, this=<optimized out>, this=<optimized out>, r=<optimized out>, a=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#46 doActivate<false> (sender=0x561624930fd0, signal_index=9, argv=0x7ffde1bcfae0) at kernel/qobject.cpp:3886
#47 0x00007f84e21de9b7 in QAbstractButton::clicked (this=this@entry=0x561624930fd0, _t1=<optimized out>) at .moc/moc_qabstractbutton.cpp:308
#48 0x00007f84e21e11da in QAbstractButtonPrivate::emitClicked (this=0x56162495e330) at widgets/qabstractbutton.cpp:416
#49 0x00007f84e21e270a in QAbstractButtonPrivate::click (this=0x56162495e330) at widgets/qabstractbutton.cpp:409
#50 0x00007f84e21e28d8 in QAbstractButton::mouseReleaseEvent (this=0x561624930fd0, e=0x7ffde1bd0060) at widgets/qabstractbutton.cpp:1045
#51 0x00007f84e2130446 in QWidget::event (this=0x561624930fd0, event=0x7ffde1bd0060) at kernel/qwidget.cpp:8659
#52 0x00007f84e20fa2c6 in QApplicationPrivate::notify_helper (this=this@entry=0x561624363720, receiver=receiver@entry=0x561624930fd0, e=e@entry=0x7ffde1bd0060) at kernel/qapplication.cpp:3637
#53 0x00007f84e20ff0f7 in QApplication::notify (this=0x7ffde1bcfcf0, receiver=0x561624930fd0, e=0x7ffde1bd0060) at kernel/qapplication.cpp:3081
#54 0x00007f84e16835aa in QCoreApplication::notifyInternal2 (receiver=0x561624930fd0, event=0x7ffde1bd0060) at kernel/qcoreapplication.cpp:1064
#55 0x00007f84e20fdabf in QApplicationPrivate::sendMouseEvent (receiver=0x561624930fd0, event=0x7ffde1bd0060, alienWidget=0x561624930fd0, nativeWidget=0x561624dc6a60, buttonDown=<optimized out>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false) at kernel/qapplication.cpp:2619
#56 0x00007f84e214e927 in QWidgetWindow::handleMouseEvent (this=0x561624ad7500, event=0x7ffde1bd03d0) at kernel/qwidgetwindow.cpp:683
#57 0x00007f84e21504dc in QWidgetWindow::event (this=0x561624ad7500, event=0x7ffde1bd03d0) at kernel/qwidgetwindow.cpp:300
#58 0x00007f84e20fa2c6 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x561624ad7500, e=0x7ffde1bd03d0) at kernel/qapplication.cpp:3637
#59 0x00007f84e16835aa in QCoreApplication::notifyInternal2 (receiver=0x561624ad7500, event=0x7ffde1bd03d0) at kernel/qcoreapplication.cpp:1064
#60 0x00007f84e1a56fd0 in QGuiApplicationPrivate::processMouseEvent (e=0x56162493d8e0) at kernel/qguiapplication.cpp:2282
#61 0x00007f84e1a416f5 in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at kernel/qwindowsysteminterface.cpp:1169
#62 0x00007f84dfe54c45 in userEventSourceDispatch(_GSource*, int (*)(void*), void*) () from /usr/lib/libQt5WaylandClient.so.5
#63 0x00007f84df334163 in g_main_dispatch (context=0x561624366980) at ../glib/glib/gmain.c:3417
#64 g_main_context_dispatch (context=0x561624366980) at ../glib/glib/gmain.c:4135
#65 0x00007f84df38a9e9 in g_main_context_iterate.constprop.0 (context=context@entry=0x561624366980, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/glib/gmain.c:4211
#66 0x00007f84df3316c5 in g_main_context_iteration (context=0x561624366980, may_block=1) at ../glib/glib/gmain.c:4276
#67 0x00007f84e16cf5f7 in QEventDispatcherGlib::processEvents (this=0x56162434b370, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#68 0x00007f84e167b88b in QEventLoop::exec (this=this@entry=0x7ffde1bd0760, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#69 0x00007f84e22f48b6 in QDialog::exec (this=0x561624dc6a60) at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#70 0x00005616227d3f70 in (anonymous namespace)::editNewTemplate (type=EditAlarmDlg::DISPLAY, preset=..., parent=0x561624d51230) at /usr/src/debug/kalarm-22.04.0/src/functions.cpp:1404
#71 0x00005616227f529e in KAlarm::editNewTemplate (parent=0x561624d51230, type=EditAlarmDlg::DISPLAY) at /usr/src/debug/kalarm-22.04.0/src/functions.cpp:1236
#72 TemplateDlg::slotNew (this=<optimized out>, type=EditAlarmDlg::DISPLAY) at /usr/src/debug/kalarm-22.04.0/src/templatedlg.cpp:145
#73 0x00007f84e16b4463 in QtPrivate::QSlotObjectBase::call (a=<optimized out>, r=<optimized out>, this=<optimized out>, this=<optimized out>, r=<optimized out>, a=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#74 doActivate<false> (sender=0x561624d40b50, signal_index=8, argv=0x7ffde1bd0980) at kernel/qobject.cpp:3886
#75 0x00005616227e9276 in NewAlarmAction::selected (_t1=<optimized out>, this=<optimized out>) at /usr/src/debug/build/src/kalarm_bin_autogen/EWIEGA46WW/moc_newalarmaction.cpp:182
#76 NewAlarmAction::slotSelected (this=<optimized out>, action=<optimized out>) at /usr/src/debug/kalarm-22.04.0/src/newalarmaction.cpp:131
#77 0x00007f84e16b4463 in QtPrivate::QSlotObjectBase::call (a=<optimized out>, r=<optimized out>, this=<optimized out>, this=<optimized out>, r=<optimized out>, a=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#78 doActivate<false> (sender=0x5616248e8530, signal_index=9, argv=0x7ffde1bd0a90) at kernel/qobject.cpp:3886
#79 0x00007f84e227d967 in QMenu::triggered (this=this@entry=0x5616248e8530, _t1=<optimized out>, _t1@entry=0x561624b88b10) at .moc/moc_qmenu.cpp:283
#80 0x00007f84e2281515 in QMenuPrivate::_q_actionTriggered (this=0x561624889cc0) at widgets/qmenu.cpp:1486
#81 QMenu::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at .moc/moc_qmenu.cpp:125
#82 0x00007f84e16b44af in doActivate<false> (sender=0x561624b88b10, signal_index=4, argv=0x7ffde1bd0c20) at kernel/qobject.cpp:3898
#83 0x00007f84e20ed517 in QAction::triggered (this=this@entry=0x561624b88b10, _t1=<optimized out>) at .moc/moc_qaction.cpp:376
#84 0x00007f84e20f2fe0 in QAction::activate (this=0x561624b88b10, event=<optimized out>) at kernel/qaction.cpp:1161
#85 0x00007f84e2275c13 in QMenuPrivate::activateCausedStack (this=this@entry=0x561624889cc0, causedStack=..., action=action@entry=0x561624b88b10, action_e=action_e@entry=QAction::Trigger, self=self@entry=true) at widgets/qmenu.cpp:1384
#86 0x00007f84e2275cf1 in QMenuPrivate::activateAction (this=0x561624889cc0, action=0x561624b88b10, action_e=QAction::Trigger, self=<optimized out>) at widgets/qmenu.cpp:1461
#87 0x00007f84e2130446 in QWidget::event (this=0x5616248e8530, event=0x7ffde1bd1230) at kernel/qwidget.cpp:8659
#88 0x00007f84e20fa2c6 in QApplicationPrivate::notify_helper (this=this@entry=0x561624363720, receiver=receiver@entry=0x5616248e8530, e=e@entry=0x7ffde1bd1230) at kernel/qapplication.cpp:3637
#89 0x00007f84e20ff0f7 in QApplication::notify (this=0x7ffde1bd0ec0, receiver=0x5616248e8530, e=0x7ffde1bd1230) at kernel/qapplication.cpp:3081
#90 0x00007f84e16835aa in QCoreApplication::notifyInternal2 (receiver=0x5616248e8530, event=0x7ffde1bd1230) at kernel/qcoreapplication.cpp:1064
#91 0x00007f84e20fdabf in QApplicationPrivate::sendMouseEvent (receiver=0x5616248e8530, event=0x7ffde1bd1230, alienWidget=0x0, nativeWidget=0x5616248e8530, buttonDown=<optimized out>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false) at kernel/qapplication.cpp:2619
#92 0x00007f84e214f443 in QWidgetWindow::handleMouseEvent (this=0x56162488b470, event=0x7ffde1bd15a0) at kernel/qwidgetwindow.cpp:580
#93 0x00007f84e21504dc in QWidgetWindow::event (this=0x56162488b470, event=0x7ffde1bd15a0) at kernel/qwidgetwindow.cpp:300
#94 0x00007f84e20fa2c6 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x56162488b470, e=0x7ffde1bd15a0) at kernel/qapplication.cpp:3637
#95 0x00007f84e16835aa in QCoreApplication::notifyInternal2 (receiver=0x56162488b470, event=0x7ffde1bd15a0) at kernel/qcoreapplication.cpp:1064
#96 0x00007f84e1a56fd0 in QGuiApplicationPrivate::processMouseEvent (e=0x7f84d4006820) at kernel/qguiapplication.cpp:2282
#97 0x00007f84e1a416f5 in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at kernel/qwindowsysteminterface.cpp:1169
#98 0x00007f84dfe54c45 in userEventSourceDispatch(_GSource*, int (*)(void*), void*) () from /usr/lib/libQt5WaylandClient.so.5
#99 0x00007f84df334163 in g_main_dispatch (context=0x561624366980) at ../glib/glib/gmain.c:3417
#100 g_main_context_dispatch (context=0x561624366980) at ../glib/glib/gmain.c:4135
#101 0x00007f84df38a9e9 in g_main_context_iterate.constprop.0 (context=context@entry=0x561624366980, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/glib/gmain.c:4211
#102 0x00007f84df3316c5 in g_main_context_iteration (context=0x561624366980, may_block=1) at ../glib/glib/gmain.c:4276
#103 0x00007f84e16cf57a in QEventDispatcherGlib::processEvents (this=0x56162434b370, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#104 0x00007f84e167b88b in QEventLoop::exec (this=this@entry=0x7ffde1bd1940, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#105 0x00007f84e227c6ad in QMenuPrivate::exec(QPoint const&, QAction*, std::function<QPoint (QSize const&)>) (this=0x561624889cc0, p=..., action=0x0, positionFunction=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#106 0x00007f84e227c7d3 in QMenu::exec (this=<optimized out>, p=..., action=<optimized out>) at widgets/qmenu.cpp:2687
#107 0x00007f84e22890ff in QPushButtonPrivate::_q_popupPressed (this=0x561624de8d80) at widgets/qpushbutton.cpp:611
#108 0x00007f84e16b44af in doActivate<false> (sender=0x561624c584f0, signal_index=7, argv=0x7ffde1bd1ad0) at kernel/qobject.cpp:3898
#109 0x00007f84e21e12cd in QAbstractButtonPrivate::emitPressed (this=0x561624de8d80) at widgets/qabstractbutton.cpp:438
#110 0x00007f84e21e14d7 in QAbstractButton::mousePressEvent (this=0x561624c584f0, e=0x7ffde1bd2040) at widgets/qabstractbutton.cpp:1017
#111 0x00007f84e2130746 in QWidget::event (this=0x561624c584f0, event=0x7ffde1bd2040) at kernel/qwidget.cpp:8655
#112 0x00007f84e20fa2c6 in QApplicationPrivate::notify_helper (this=this@entry=0x561624363720, receiver=receiver@entry=0x561624c584f0, e=e@entry=0x7ffde1bd2040) at kernel/qapplication.cpp:3637
#113 0x00007f84e20ff0f7 in QApplication::notify (this=0x7ffde1bd1cd0, receiver=0x561624c584f0, e=0x7ffde1bd2040) at kernel/qapplication.cpp:3081
#114 0x00007f84e16835aa in QCoreApplication::notifyInternal2 (receiver=0x561624c584f0, event=0x7ffde1bd2040) at kernel/qcoreapplication.cpp:1064
#115 0x00007f84e20fdabf in QApplicationPrivate::sendMouseEvent (receiver=0x561624c584f0, event=0x7ffde1bd2040, alienWidget=0x561624c584f0, nativeWidget=0x561624dc9c90, buttonDown=<optimized out>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false) at kernel/qapplication.cpp:2619
#116 0x00007f84e214e927 in QWidgetWindow::handleMouseEvent (this=0x561624adfcd0, event=0x7ffde1bd23b0) at kernel/qwidgetwindow.cpp:683
#117 0x00007f84e21504dc in QWidgetWindow::event (this=0x561624adfcd0, event=0x7ffde1bd23b0) at kernel/qwidgetwindow.cpp:300
#118 0x00007f84e20fa2c6 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x561624adfcd0, e=0x7ffde1bd23b0) at kernel/qapplication.cpp:3637
#119 0x00007f84e16835aa in QCoreApplication::notifyInternal2 (receiver=0x561624adfcd0, event=0x7ffde1bd23b0) at kernel/qcoreapplication.cpp:1064
#120 0x00007f84e1a56fd0 in QGuiApplicationPrivate::processMouseEvent (e=0x7f84d400aa40) at kernel/qguiapplication.cpp:2282
#121 0x00007f84e1a416f5 in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at kernel/qwindowsysteminterface.cpp:1169
#122 0x00007f84dfe54c45 in userEventSourceDispatch(_GSource*, int (*)(void*), void*) () from /usr/lib/libQt5WaylandClient.so.5
#123 0x00007f84df334163 in g_main_dispatch (context=0x561624366980) at ../glib/glib/gmain.c:3417
#124 g_main_context_dispatch (context=0x561624366980) at ../glib/glib/gmain.c:4135
#125 0x00007f84df38a9e9 in g_main_context_iterate.constprop.0 (context=context@entry=0x561624366980, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/glib/gmain.c:4211
#126 0x00007f84df3316c5 in g_main_context_iteration (context=0x561624366980, may_block=1) at ../glib/glib/gmain.c:4276
#127 0x00007f84e16cf57a in QEventDispatcherGlib::processEvents (this=0x56162434b370, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#128 0x00007f84e167b88b in QEventLoop::exec (this=0x7ffde1bd2740, flags=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#129 0x00007f84e1686fd7 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#130 0x00007f84e1a521d2 in QGuiApplication::exec () at kernel/qguiapplication.cpp:1867
#131 0x00007f84e20f864a in QApplication::exec () at kernel/qapplication.cpp:2829
#132 0x00005616226d044e in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/kalarm-22.04.0/src/main.cpp:75
[Inferior 1 (process 205060) detached]

Possible duplicates by query: bug 85915, bug 401450, bug 391363, bug 390214, bug 373054.

Reported using DrKonqi
Comment 1 David Jarvie 2022-04-30 15:31:37 UTC
Git commit 1e44f031537711733a38fe487fee78e0be41c698 by David Jarvie.
Committed on 30/04/2022 at 15:31.
Pushed by djarvie into branch 'release/22.04'.

Bug 453193: Fix crash in font chooser after deselecting default font

If the font chooser is displayed with 'use default font' selected,
and 'use default font' is deselected and a style is then chosen,
it crashed due to having no current font.

M  +2    -1    Changelog
M  +1    -1    src/birthdaydlg.cpp
M  +2    -5    src/editdlgtypes.cpp
M  +3    -9    src/fontcolour.cpp
M  +2    -3    src/fontcolour.h
M  +4    -13   src/fontcolourbutton.cpp
M  +9    -3    src/fontcolourbutton.h

https://invent.kde.org/pim/kalarm/commit/1e44f031537711733a38fe487fee78e0be41c698