Bug 453193: Fix crash in font chooser after deselecting default font

If the font chooser is displayed with 'use default font' selected,
and 'use default font' is deselected and a style is then chosen,
it crashed due to having no current font.

BUG:453193